--- a/prueba2B.html
+++ b/prueba2B.html
@@ -7,6 +7,11 @@
     <!-- abre cabecera del documento   -->
     <!-- contenidos de la cabecera del documento                             -->
     <title>Página web de ejemplo</title>
+ 	 	<style type="text/css" title="estilos personales">
+		body {background-color: powderblue;}
+		h1   {color: blue;}
+		p    {color: red;}
+		</style>
   </head>
   <!-- cierra cabecera del documento --> <body>
     <!-- abre cuerpo del documento     -->
@@ -14,9 +19,12 @@
     <h1>Título</h1>
     <p>Texto de la página web de ejemplo</p>
     <p><img src="media/image1.png" alt="text alternativo" title="titulo" style="width: 150px; height: 150px;"></p>
-    <p><br>
+    <br>
+    <p><a href="file:///D:/TIG/Visualizacion.Presentacion.DifusionSIG/5.3.VisualizacionWeb/Git/GonzaloPG1.github.io/prueba.html"
+
+        target="_blank">gkjfkj</a><br>
     </p>
-    <video src="media/video.webm" preload="none" autoplay="autoplay" loop="loop"></video>
+    <br>
   </body>
   <!-- cierra cuerpo del documento    -->
 </html>
