--- a/VisualizacionWebEvaluacion/GonzaloPG.html
+++ b/VisualizacionWebEvaluacion/GonzaloPG.html
@@ -17,7 +17,7 @@
         <header>
 
             <h1>
-							<font face="Comic Sans MS,arial,verdana">GonzaloPG Página Web</font> <!-- Título -->
+							<font face="Comic Sans MS">GonzaloPG Página Web</font> <!-- Título -->
 						</h1>
 						<ul class="horizontal"> <!-- Menú con elementos a continuación -->
 						    <li><a href="GonzaloPG.html">Home</a></li> <!-- enlace a home -->
