--- a/VisualizacionWebEvaluacion/visor2.html
+++ b/VisualizacionWebEvaluacion/visor2.html
@@ -24,7 +24,7 @@
     </head>
     <body>
       <h1>
-        <font face="Comic Sans MS,arial,verdana">Visor 2 - Hidrografía mundial</font>
+        <font face="Comic Sans MS">Visor 2 - Hidrografía mundial</font>
       </h1>
         <div id="map">
         </div>
