--- a/VisualizacionWebEvaluacion/visor1.html
+++ b/VisualizacionWebEvaluacion/visor1.html
@@ -12,7 +12,7 @@
 
   <body>
   <h1>
-    <font face="Comic Sans MS,arial,verdana">Visor 1</font>
+    <font face="Comic Sans MS">Visor 1</font>
   </h1>
 
 
