--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
             <figure>
-                    <img src="media/A.jpg" width="400" height="250" alt="foto"  /> <!-- incluir imagen modificando alguna propiedad -->
+                    <img src="media/A.JPG" width="400" height="250" alt="foto"  /> <!-- incluir imagen modificando alguna propiedad -->
                     <figcaption>Fotografía de la naturaleza - Visores cartográficos</figcaption> <!-- pie de imagen -->
             </figure>
 
